[gd_scene load_steps=16 format=3 uid="uid://bp5qf8wxxydse"]

[ext_resource type="Theme" uid="uid://bw5oquilxwgax" path="res://assets/UI/themes/UI-elements/resource-slot.tres" id="1_rhyo1"]
[ext_resource type="Script" path="res://UI/menu/inventory/resource-slot-ui.gd" id="2_omeu2"]
[ext_resource type="Theme" uid="uid://dobbys3uid5er" path="res://assets/UI/themes/UI-elements/resource-icon.tres" id="4_moob4"]
[ext_resource type="Texture2D" uid="uid://b3opfj120sgb6" path="res://assets/UI/icons/menu/inventory/Craft.png" id="4_xdy42"]
[ext_resource type="Texture2D" uid="uid://yyxnduijymmo" path="res://assets/UI/icons/menu/inventory/Consume.png" id="6_0lsik"]
[ext_resource type="Theme" uid="uid://cxk4iwl1igdto" path="res://assets/UI/themes/UI-elements/button-large.tres" id="6_8t0fk"]
[ext_resource type="PackedScene" uid="uid://bfw7jp1wfuqal" path="res://UI/shared/button.tscn" id="6_cemff"]
[ext_resource type="Texture2D" uid="uid://feedj20e76of" path="res://assets/UI/icons/menu/inventory/Storage.png" id="7_1y86g"]
[ext_resource type="Texture2D" uid="uid://bxmunutlqsf7u" path="res://assets/UI/icons/menu/inventory/Right Arrow 2.png" id="9_0o68j"]
[ext_resource type="Texture2D" uid="uid://yuwbyvgqpgyg" path="res://assets/UI/icons/menu/inventory/Right Arrow 1.png" id="9_ect15"]
[ext_resource type="Texture2D" uid="uid://cgm6rsehl83up" path="res://assets/UI/icons/menu/inventory/Left Arrow 2.png" id="10_dj76o"]
[ext_resource type="Texture2D" uid="uid://bxke5sm6j7xh1" path="res://assets/UI/icons/menu/inventory/Right Arrow 3.png" id="11_p5hr1"]
[ext_resource type="Texture2D" uid="uid://gpta4l5uf1sb" path="res://assets/UI/icons/menu/inventory/Left Arrow 1.png" id="12_wjia7"]
[ext_resource type="Texture2D" uid="uid://beogyl2pt2if4" path="res://assets/UI/icons/menu/inventory/Left Arrow 3.png" id="14_kn7j3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4u7vf"]

[node name="PanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(600, 60)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -30.0
offset_right = 300.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("1_rhyo1")
script = ExtResource("2_omeu2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_4u7vf")

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="BlueprintIcon" type="PanelContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 1
theme = ExtResource("4_moob4")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer/BlueprintIcon"]
custom_minimum_size = Vector2(7, 7)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_xdy42")
expand_mode = 1

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
autowrap_mode = 2

[node name="Amount" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
horizontal_alignment = 1

[node name="WeaponSlots" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="AssignWeaponSlot1" parent="MarginContainer/WeaponSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("6_8t0fk")
flat = false
version = 1

[node name="AssignWeaponSlot2" parent="MarginContainer/WeaponSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("6_8t0fk")
flat = false
version = 1

[node name="AssignWeaponSlot3" parent="MarginContainer/WeaponSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("6_8t0fk")
flat = false
version = 1

[node name="AmmunitionSlots" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="AssignAmmunitionSlot1" parent="MarginContainer/AmmunitionSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
theme = ExtResource("6_8t0fk")
flat = false
version = 1

[node name="AssignAmmunitionSlot2" parent="MarginContainer/AmmunitionSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
theme = ExtResource("6_8t0fk")
flat = false
version = 1

[node name="AssignAmmunitionSlot3" parent="MarginContainer/AmmunitionSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
theme = ExtResource("6_8t0fk")
flat = false
version = 1

[node name="CraftButton" parent="MarginContainer" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("4_xdy42")
version = 1

[node name="EquipButton" parent="MarginContainer" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("7_1y86g")
version = 1

[node name="ConsumeSlots" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="ConsumeButton" parent="MarginContainer/ConsumeSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("6_0lsik")
version = 1

[node name="ConsumeEquipButton" parent="MarginContainer/ConsumeSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("7_1y86g")
version = 1

[node name="PlayerTransferSlots" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="PlayerTransfer1Button" parent="MarginContainer/PlayerTransferSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("9_ect15")
version = 1

[node name="PlayerTransfer5Button" parent="MarginContainer/PlayerTransferSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("9_0o68j")
version = 1

[node name="PlayerTransferAllButton" parent="MarginContainer/PlayerTransferSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("11_p5hr1")
version = 1

[node name="BoxTransferSlots" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="BoxTransfer1Button" parent="MarginContainer/BoxTransferSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("12_wjia7")
version = 1

[node name="BoxTransfer5Button" parent="MarginContainer/BoxTransferSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("10_dj76o")
version = 1

[node name="BoxTransferAllButton" parent="MarginContainer/BoxTransferSlots" instance=ExtResource("6_cemff")]
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("6_8t0fk")
flat = false
texture = ExtResource("14_kn7j3")
version = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/WeaponSlots/AssignWeaponSlot1" to="." method="_on_assign_weapon_slot_1_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/WeaponSlots/AssignWeaponSlot1" to="." method="_on_assign_weapon_slot_1_mouse_exited"]
[connection signal="pressed" from="MarginContainer/WeaponSlots/AssignWeaponSlot1" to="." method="_on_assign_weapon_slot_1_pressed"]
[connection signal="mouse_entered" from="MarginContainer/WeaponSlots/AssignWeaponSlot2" to="." method="_on_assign_weapon_slot_2_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/WeaponSlots/AssignWeaponSlot2" to="." method="_on_assign_weapon_slot_2_mouse_exited"]
[connection signal="pressed" from="MarginContainer/WeaponSlots/AssignWeaponSlot2" to="." method="_on_assign_weapon_slot_2_pressed"]
[connection signal="mouse_entered" from="MarginContainer/WeaponSlots/AssignWeaponSlot3" to="." method="_on_assign_weapon_slot_3_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/WeaponSlots/AssignWeaponSlot3" to="." method="_on_assign_weapon_slot_3_mouse_exited"]
[connection signal="pressed" from="MarginContainer/WeaponSlots/AssignWeaponSlot3" to="." method="_on_assign_weapon_slot_3_pressed"]
[connection signal="mouse_entered" from="MarginContainer/AmmunitionSlots/AssignAmmunitionSlot1" to="." method="_on_assign_ammunition_slot_1_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/AmmunitionSlots/AssignAmmunitionSlot1" to="." method="_on_assign_ammunition_slot_1_mouse_exited"]
[connection signal="pressed" from="MarginContainer/AmmunitionSlots/AssignAmmunitionSlot1" to="." method="_on_assign_ammunition_slot_1_pressed"]
[connection signal="mouse_entered" from="MarginContainer/AmmunitionSlots/AssignAmmunitionSlot2" to="." method="_on_assign_ammunition_slot_2_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/AmmunitionSlots/AssignAmmunitionSlot2" to="." method="_on_assign_ammunition_slot_2_mouse_exited"]
[connection signal="pressed" from="MarginContainer/AmmunitionSlots/AssignAmmunitionSlot2" to="." method="_on_assign_ammunition_slot_2_pressed"]
[connection signal="mouse_entered" from="MarginContainer/AmmunitionSlots/AssignAmmunitionSlot3" to="." method="_on_assign_ammunition_slot_3_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/AmmunitionSlots/AssignAmmunitionSlot3" to="." method="_on_assign_ammunition_slot_3_mouse_exited"]
[connection signal="pressed" from="MarginContainer/AmmunitionSlots/AssignAmmunitionSlot3" to="." method="_on_assign_ammunition_slot_3_pressed"]
[connection signal="pressed" from="MarginContainer/CraftButton" to="." method="_on_craft_button_pressed"]
[connection signal="pressed" from="MarginContainer/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="MarginContainer/ConsumeSlots/ConsumeButton" to="." method="_on_consume_button_pressed"]
[connection signal="pressed" from="MarginContainer/ConsumeSlots/ConsumeEquipButton" to="." method="_on_consume_equip_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayerTransferSlots/PlayerTransfer1Button" to="." method="_on_player_transfer_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayerTransferSlots/PlayerTransfer5Button" to="." method="_on_player_transfer_5_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayerTransferSlots/PlayerTransferAllButton" to="." method="_on_player_transfer_all_button_pressed"]
[connection signal="pressed" from="MarginContainer/BoxTransferSlots/BoxTransfer1Button" to="." method="_on_box_transfer_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/BoxTransferSlots/BoxTransfer5Button" to="." method="_on_box_transfer_5_button_pressed"]
[connection signal="pressed" from="MarginContainer/BoxTransferSlots/BoxTransferAllButton" to="." method="_on_box_transfer_all_button_pressed"]
